--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
-  "name": "assessment-backend",
+  "name": "travel-journal",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chaltu11hassan/assessment-backend.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/chaltu11hassan/assessment-backend/issues"
+  },
+  "homepage": "https://github.com/chaltu11hassan/assessment-backend#readme",
   "dependencies": {
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "nodemon": "^2.0.19"
-  },
-  "description": ""
+    "express": "^4.18.1"
+  }
 }
